Reset password option

--- a/lang/pl.json
+++ b/lang/pl.json
@@ -756,5 +756,6 @@
     "Zimbabwe": "Zimbabwe",
     "Zip / Postal Code": "Kod pocztowy",
     "Åland Islands": "Wyspy Alandzkie",
-    "No new expenses found!": "Nie znaleziono żadnych nowych wydatków"
+    "No new expenses found!": "Nie znaleziono żadnych nowych wydatków",
+    "Wrong password reset data": "Nieprawidłowe dane do zrestartowania hasła."
 }
